# AV-Development-YOLOv5_ROS

./: .gitignore  CMakeLists.txt  package.xml
launch/: yolov5.launch
src/: detect.py  yolo.py
